# rwkv-srs

./: .gitattributes  .gitignore  PUBLIC_EXPORT_PROVENANCE.json  README.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: public-release.yml
docs/: PUBLIC_RELEASE.md
release/: public_export_policy.json
rust/rwkv-srs-cpu/: Cargo.toml  README.md
rust/rwkv-srs-cpu/src/: cpu_config.rs  features.rs  gpu.rs  id_encoding.rs  lib.rs  model.rs  model_weights.rs  ops.rs  portable_simd.rs  profile.rs  py_state.rs  state.rs  tensor_io.rs  weights.rs
rust/rwkv-srs-cpu/src/model/: bindings.rs  bulk.rs  channel_mixer.rs  checkpoint_bin.rs  gpu.rs  gpu_predict.wgsl  gpu_predict_shared_rows.wgsl  gpu_process_arena.wgsl  gpu_process_fused_projections.wgsl  gpu_process_heads.wgsl  gpu_process_scan.rs  gpu_process_scan.wgsl  gpu_process_state.wgsl  gpu_process_topology.wgsl  linear.rs  live_session.rs  output_heads.rs  pipeline.rs  prediction_batch.rs  process_payload.rs  review_batch.rs  runtime.rs  state.rs  state_builder.rs  time_mixer.rs  undo.rs  validation.rs
scripts/: build_local_artifact.py  build_rust_ci_wheel.sh  generate_third_party_notices.py  public_release_export.py  release_manifest.py  rust_wheel_contract.py  validate_public_release.py
src/rwkv_srs/: __init__.py  _api_core.py  _backend.py  _rust.py  live.py  prediction_batch.py  review_batch.py
src/rwkv_srs/backends/: __init__.py  rust.py
tests/: __init__.py
tests/fixtures/models/: PROVENANCE.md
tests/release/: README.md  __init__.py  conftest.py  model_fixture.py  runtime_probe.py  test_execution_modes.py  test_import_contract.py  test_model_distribution.py  test_runtime_contract.py
tests/release/fixtures/: PROVENANCE.json  PROVENANCE.md  expected_outputs.json  reviews.json
